# cv-axis-python

./: README.md  ptz.py  pyproject.toml
axis/: __init__.py  ptz.py
