[tool.poetry]
name = "axis"
version = "0.1.0"
description = ""
authors = ["akubota-lab <kubotaarisa@team-lab.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
opencv-python = "^4.10.0.84"
flet = "^0.24.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
